fix skills alignment

--- a/src/components/skill-tiles/component.css
+++ b/src/components/skill-tiles/component.css
@@ -5,11 +5,6 @@
   margin-top: 30px;
 }
 
-@media only screen and (max-width: 766px) {
-  .section {
-    margin-top: 150px;
-  }
-}
 .wall {
   display: flex;
 }
